<resources>
    <string name="app_name">FunCheapSF</string>
    <string name="title_activity_maps">FunCheap</string>

    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_filters">Filters</string>
    <string name="bottom_nav_bookmarks">Bookmarks</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="content_description_event_photo">Event photo</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- Filters Screen -->
    <string name="what">WHAT</string>
    <string name="when">WHEN</string>
    <string name="where">WHERE</string>
    <string name="city">City</string>
    <string name="price">PRICE</string>
    <string name="categories">CATEGORIES</string>
    <string name="done">APPLY</string>

    <string-array name="price_options_array">
        <item>ANY</item>
        <item>FREE</item>
    </string-array>

    <string-array name="when_array">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>This Week</item>
        <item>This Weekend</item>
        <item>Next Week</item>
        <item>This Month</item>
        <item>Next Month</item>
    </string-array>

    <string-array name="categories_array">
        <item>Select Categories</item>
        <item>Top Pick</item>
        <item>Annual Event</item>
        <item>Art &amp; Museums</item>
        <item>Charity &amp; Volunteering</item>
        <item>Club / DJ</item>
        <item>Comedy</item>
        <item>Eating &amp; Drinking</item>
        <item>Fairs &amp; Festivals</item>
        <item>Free Stuff</item>
        <item>Fun &amp; Games</item>
        <item>Geek Event</item>
        <item>Kids &amp; Families</item>
        <item>Lectures &amp; Workshops</item>
        <item>Literature</item>
        <item>Live Music</item>
        <item>Movies</item>
        <item>Shopping &amp; Fashion</item>
        <item>Sports &amp; Fitness</item>
        <item>Theater &amp; Performance</item>
    </string-array>

    <string name="save_filter">Do you want to save this Filter?</string>
    <string name="name_filter">Filter name</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="search">Search</string>

    <string name="default_notification_channel_id">event_updates</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login_guest">Continue as guest</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_sign_up"><u>Create one now.</u></string>

    <string name="detail_about">About</string>

    <string name="facebook_app_id">305967693253372</string>
    <string name="fb_login_protocol_scheme">fb305967693253372</string>

    <!-- Toolbar -->
    <string name="menu_saved_filters">Saved Filters</string>
    <string name="menu_switch_view">Switch View</string>
    <string name="menu_map_view">Map View</string>

</resources>
