<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/bottom_nav_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filters"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/bottom_nav_filters"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bookmarks"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/bottom_nav_bookmarks"
        app:showAsAction="ifRoom" />
</menu>