<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:elevation="@dimen/z_bottom_sheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <HorizontalScrollView
        android:id="@+id/filter_chips_scrollview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:scrollbarSize="@dimen/margin_tiny">
        <LinearLayout
            android:id="@+id/filter_chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_medium"
            android:orientation="horizontal">
            <com.vpaliy.chips_lover.ChipView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:chip_text="Any Event"
                tools:visibility="visible" />
            <com.vpaliy.chips_lover.ChipView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:chip_text="Tomorrow"
                tools:visibility="visible" />
            <com.vpaliy.chips_lover.ChipView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:chip_text="Free"
                tools:visibility="visible" />
        </LinearLayout>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_chips_scrollview"
        android:background="@drawable/edit_item_background"
        android:gravity="center_vertical"
        android:hint="@string/search"
        android:padding="@dimen/image_size" />

    <TextView
        android:id="@+id/tv_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:padding="@dimen/padding_left"
        android:text="@string/when" />

    <Spinner
        android:id="@+id/when_spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_when"
        android:padding="@dimen/padding_left" />

    <TextView
        android:id="@+id/tv_where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/when_spin"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingLeft="@dimen/padding_left"
        android:text="@string/where" />

    <AutoCompleteTextView
        android:id="@+id/edit_where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_where"
        android:layout_marginTop="@dimen/padding_top"
        android:hint="@string/address"
        android:paddingLeft="@dimen/padding_left" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_where"
        android:layout_marginBottom="@dimen/padding_top"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingLeft="@dimen/padding_left"
        android:text="@string/price" />

    <LinearLayout
        android:id="@+id/price_layout_mstb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_price"
        android:layout_marginTop="@dimen/padding_top"
        android:paddingLeft="@dimen/padding_left">

        <org.honorato.multistatetogglebutton.MultiStateToggleButton
            android:id="@+id/price_mstb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_price"
            app:mstbColorNotPressedBackground="@color/mdtp_white"
            app:mstbColorPressedBackground="@color/light_blue"
            app:mstbPrimaryColor="@color/light_blue"
            app:mstbSecondaryColor="@color/mdtp_white"
            app:values="@array/price_options_array" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_layout_mstb"
        android:layout_marginTop="@dimen/padding_left"
        android:paddingLeft="@dimen/padding_left"
        android:text="@string/categories" />

    <Spinner
        android:id="@+id/category_spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_category"
        android:layout_marginTop="@dimen/padding_top"
        android:paddingLeft="@dimen/padding_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/category_spin"
        android:orientation="vertical">

        <GridView
            android:id="@+id/button_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_spin"
            android:layout_weight="1"
            android:horizontalSpacing="@dimen/padding_top"
            android:numColumns="auto_fit"
            android:paddingLeft="@dimen/padding_left"
            android:verticalSpacing="@dimen/padding_top" />


        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/light_blue"
            android:text="@string/done"
            android:textColor="@color/mdtp_white" />

    </LinearLayout>

</RelativeLayout>